--- a/style2.css
+++ b/style2.css
@@ -9,7 +9,7 @@ div.showcase {
 	width:300px;
 	color: #f2f2f2;
 	background-color: #B2AD9B;
-	border: 2px solid #736e59;
+	border: 2px solid #65604e;
 	display: inline-block;
 	margin:10px;
 }
@@ -46,7 +46,7 @@ div.desc {
 }
 
 img.img_desc {
-	border: 1px solid #736e59;
+	border: 1px solid #65604e;
 	display:table-cell;
 }
 
